svg meta update, fix hidden social icons behind fixed rock

--- a/src/page-singer-songwriter/index.scss
+++ b/src/page-singer-songwriter/index.scss
@@ -76,13 +76,13 @@ body {
 
 .content-wrap {
     padding: 0 2.4rem;
-    height: calc(100% - 12.8rem);
+    height: calc(100% - 128px);
     overflow: scroll;
 }
 
 .content-viewer {
     display: block;
-    padding-bottom: 1.6rem;
+    padding-bottom: 160px;
 }
 
 .content-cover {
